fix link spacing in header and footer

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -29,6 +29,8 @@ a {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 input {
@@ -40,13 +42,13 @@ input {
 
 .left-links, .right-links {
   display: flex;
-  gap: 30px;
+  gap: 16px;
 }
 
 .footer, .header {
   display: flex;
   justify-content: space-between;
-  padding: 8px;
+  padding: 16px;
 }
 
 .footer {
